[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Base.tscn" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="PlayerBase" parent="." instance=ExtResource("2")]
position = Vector2(140, 360)

[node name="EnemyBase" parent="." instance=ExtResource("2")]
position = Vector2(1140, 360)
is_player = false

[node name="Units" type="Node2D" parent="."]

[node name="ResourceTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 120.0

[node name="Margin" type="MarginContainer" parent="UILayer/HUD"]
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 96.0

[node name="VBox" type="VBoxContainer" parent="UILayer/HUD/Margin"]
size_flags_horizontal = 3

[node name="TopRow" type="HBoxContainer" parent="UILayer/HUD/Margin/VBox"]
size_flags_horizontal = 3

[node name="ResourceLabel" type="Label" parent="UILayer/HUD/Margin/VBox/TopRow"]
size_flags_horizontal = 1
text = "Gold: 0 | Enemy: 0"

[node name="StatusLabel" type="Label" parent="UILayer/HUD/Margin/VBox/TopRow"]
size_flags_horizontal = 3
horizontal_alignment = 1
text = "Battle in progress"

[node name="ButtonRow" type="HBoxContainer" parent="UILayer/HUD/Margin/VBox"]
custom_constants/separation = 12

[node name="GruntButton" type="Button" parent="UILayer/HUD/Margin/VBox/ButtonRow"]
text = "Grunt (50)"

[node name="RangerButton" type="Button" parent="UILayer/HUD/Margin/VBox/ButtonRow"]
text = "Ranger (80)"

[node name="TankButton" type="Button" parent="UILayer/HUD/Margin/VBox/ButtonRow"]
text = "Tank (120)"

[node name="GameOverPanel" type="Panel" parent="UILayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = 120.0

[node name="Container" type="VBoxContainer" parent="UILayer/GameOverPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
alignment = 1

[node name="ResultLabel" type="Label" parent="UILayer/GameOverPanel/Container"]
horizontal_alignment = 1
text = "Result"

[node name="RestartButton" type="Button" parent="UILayer/GameOverPanel/Container"]
text = "Restart"
